# OpenGLLearning

./: CMakeLists.txt  README.md
include/: Camera.hpp  Light.hpp  Mesh.hpp  Model.hpp  Options.hpp  Shader.hpp  UI.hpp
libs/: glfwWrapper.hpp  imgui_impl_opengl3.h  stb_image.hpp
libs/glad/: glad.h
shaders/: lightShader.frag  lightShader.vert  shader.frag  shader.vert  shader2.frag
src/: Camera.cpp  Model.cpp  Shader.cpp  UI.cpp  main.cpp
src/lib/: glad.c  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
